Fix the z-index of menus

--- a/styles/modal.less
+++ b/styles/modal.less
@@ -75,7 +75,9 @@ details.menu {
         // They should also be colorized to show the menu is open.
         background-color: var(--button-hover-bg);
     }
+}
 
+.menu-modal {
     // The bounding box holding the menu.  We add padding here so the menu never
     // outgrows the viewport.  (The padding will be overridden by the Vue menu
     // component to position the menu properly.)
